image page--- fixing alignment

--- a/motorchi/css/style.css
+++ b/motorchi/css/style.css
@@ -58,7 +58,8 @@
 		
 
 .image {
-	margin-left: 40px;
+	margin-left: 30px;
+	clear: left;
 }
 
 .image h1, .photo h1{
@@ -68,6 +69,7 @@
 					
 .photo img{
 	width:40%;
+	
 }
 .photo{
 	list-style: none;
